prepare next release, when the 19-21 hours will be opened

--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
@@ -49,9 +49,9 @@
             <td id="hour-16" class="coverageHour" onClick="coverageClick(16)">.</td>
             <td id="hour-17" class="coverageHour" onClick="coverageClick(17)">.</td>
             <td id="hour-18" class="coverageHour" onClick="coverageClick(18)">.</td>
-            <td id="hour-19" class="coverageHour lowPriority" onClick="coverageClick(19)">.</td>
-            <td id="hour-20" class="coverageHour lowPriority" onClick="coverageClick(20)">.</td>
-            <td id="hour-21" class="coverageHour lowPriority" onClick="coverageClick(21)">.</td>
+            <td id="hour-19" class="coverageHour plannedHour" onClick="coverageClick(19)">.</td>
+            <td id="hour-20" class="coverageHour plannedHour" onClick="coverageClick(20)">.</td>
+            <td id="hour-21" class="coverageHour plannedHour" onClick="coverageClick(21)">.</td>
             <td id="hour-22" class="coverageHour lowPriority" onClick="coverageClick(22)">.</td>
             <td id="hour-23" class="coverageHour lowPriority" onClick="coverageClick(23)">.</td>
         </tr>
@@ -76,9 +76,9 @@
             <td id="hour-40" class="coverageHour" onClick="coverageClick(40)">.</td>
             <td id="hour-41" class="coverageHour" onClick="coverageClick(41)">.</td>
             <td id="hour-42" class="coverageHour" onClick="coverageClick(42)">.</td>
-            <td id="hour-43" class="coverageHour lowPriority" onClick="coverageClick(43)">.</td>
-            <td id="hour-44" class="coverageHour lowPriority" onClick="coverageClick(44)">.</td>
-            <td id="hour-45" class="coverageHour lowPriority" onClick="coverageClick(45)">.</td>
+            <td id="hour-43" class="coverageHour plannedHour" onClick="coverageClick(43)">.</td>
+            <td id="hour-44" class="coverageHour plannedHour" onClick="coverageClick(44)">.</td>
+            <td id="hour-45" class="coverageHour plannedHour" onClick="coverageClick(45)">.</td>
             <td id="hour-46" class="coverageHour lowPriority" onClick="coverageClick(46)">.</td>
             <td id="hour-47" class="coverageHour lowPriority" onClick="coverageClick(47)">.</td>
         </tr>
@@ -103,9 +103,9 @@
             <td id="hour-64" class="coverageHour" onClick="coverageClick(64)">.</td>
             <td id="hour-65" class="coverageHour" onClick="coverageClick(65)">.</td>
             <td id="hour-66" class="coverageHour" onClick="coverageClick(66)">.</td>
-            <td id="hour-67" class="coverageHour lowPriority" onClick="coverageClick(67)">.</td>
-            <td id="hour-68" class="coverageHour lowPriority" onClick="coverageClick(68)">.</td>
-            <td id="hour-69" class="coverageHour lowPriority" onClick="coverageClick(69)">.</td>
+            <td id="hour-67" class="coverageHour plannedHour" onClick="coverageClick(67)">.</td>
+            <td id="hour-68" class="coverageHour plannedHour" onClick="coverageClick(68)">.</td>
+            <td id="hour-69" class="coverageHour plannedHour" onClick="coverageClick(69)">.</td>
             <td id="hour-70" class="coverageHour lowPriority" onClick="coverageClick(70)">.</td>
             <td id="hour-71" class="coverageHour lowPriority" onClick="coverageClick(71)">.</td>
         </tr>
@@ -130,9 +130,9 @@
             <td id="hour-88" class="coverageHour" onClick="coverageClick(88)">.</td>
             <td id="hour-89" class="coverageHour" onClick="coverageClick(89)">.</td>
             <td id="hour-90" class="coverageHour" onClick="coverageClick(90)">.</td>
-            <td id="hour-91" class="coverageHour lowPriority" onClick="coverageClick(91)">.</td>
-            <td id="hour-92" class="coverageHour lowPriority" onClick="coverageClick(92)">.</td>
-            <td id="hour-93" class="coverageHour lowPriority" onClick="coverageClick(93)">.</td>
+            <td id="hour-91" class="coverageHour plannedHour" onClick="coverageClick(91)">.</td>
+            <td id="hour-92" class="coverageHour plannedHour" onClick="coverageClick(92)">.</td>
+            <td id="hour-93" class="coverageHour plannedHour" onClick="coverageClick(93)">.</td>
             <td id="hour-94" class="coverageHour lowPriority" onClick="coverageClick(94)">.</td>
             <td id="hour-95" class="coverageHour lowPriority" onClick="coverageClick(95)">.</td>
         </tr>
@@ -157,9 +157,9 @@
             <td id="hour-112" class="coverageHour" onClick="coverageClick(112)">.</td>
             <td id="hour-113" class="coverageHour" onClick="coverageClick(113)">.</td>
             <td id="hour-114" class="coverageHour" onClick="coverageClick(114)">.</td>
-            <td id="hour-115" class="coverageHour lowPriority" onClick="coverageClick(115)">.</td>
-            <td id="hour-116" class="coverageHour lowPriority" onClick="coverageClick(116)">.</td>
-            <td id="hour-117" class="coverageHour lowPriority" onClick="coverageClick(117)">.</td>
+            <td id="hour-115" class="coverageHour plannedHour" onClick="coverageClick(115)">.</td>
+            <td id="hour-116" class="coverageHour plannedHour" onClick="coverageClick(116)">.</td>
+            <td id="hour-117" class="coverageHour plannedHour" onClick="coverageClick(117)">.</td>
             <td id="hour-118" class="coverageHour lowPriority" onClick="coverageClick(118)">.</td>
             <td id="hour-119" class="coverageHour lowPriority" onClick="coverageClick(119)">.</td>
         </tr>
@@ -184,9 +184,9 @@
             <td id="hour-136" class="coverageHour" onClick="coverageClick(136)">.</td>
             <td id="hour-137" class="coverageHour" onClick="coverageClick(137)">.</td>
             <td id="hour-138" class="coverageHour" onClick="coverageClick(138)">.</td>
-            <td id="hour-139" class="coverageHour lowPriority" onClick="coverageClick(139)">.</td>
-            <td id="hour-140" class="coverageHour lowPriority" onClick="coverageClick(140)">.</td>
-            <td id="hour-141" class="coverageHour lowPriority" onClick="coverageClick(141)">.</td>
+            <td id="hour-139" class="coverageHour plannedHour" onClick="coverageClick(139)">.</td>
+            <td id="hour-140" class="coverageHour plannedHour" onClick="coverageClick(140)">.</td>
+            <td id="hour-141" class="coverageHour plannedHour" onClick="coverageClick(141)">.</td>
             <td id="hour-142" class="coverageHour lowPriority" onClick="coverageClick(142)">.</td>
             <td id="hour-143" class="coverageHour lowPriority" onClick="coverageClick(143)">.</td>
         </tr>
@@ -211,9 +211,9 @@
             <td id="hour-160" class="coverageHour" onClick="coverageClick(160)">.</td>
             <td id="hour-161" class="coverageHour" onClick="coverageClick(161)">.</td>
             <td id="hour-162" class="coverageHour" onClick="coverageClick(162)">.</td>
-            <td id="hour-163" class="coverageHour lowPriority" onClick="coverageClick(163)">.</td>
-            <td id="hour-164" class="coverageHour lowPriority" onClick="coverageClick(164)">.</td>
-            <td id="hour-165" class="coverageHour lowPriority" onClick="coverageClick(165)">.</td>
+            <td id="hour-163" class="coverageHour plannedHour" onClick="coverageClick(163)">.</td>
+            <td id="hour-164" class="coverageHour plannedHour" onClick="coverageClick(164)">.</td>
+            <td id="hour-165" class="coverageHour plannedHour" onClick="coverageClick(165)">.</td>
             <td id="hour-166" class="coverageHour lowPriority" onClick="coverageClick(166)">.</td>
             <td id="hour-167" class="coverageHour lowPriority" onClick="coverageClick(167)">.</td>
         </tr>
