--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
@@ -190,31 +190,31 @@
             <td id="hour-162-2" class="coverageHour" onClick="coverageClick(162)">.</td>
         </tr>
         <tr><td class="coverageHour lowPriorityColumn">19</td>
-            <td id="hour-19-2" class="coverageHour lowPriority" onClick="coverageClick(19)">.</td>
-            <td id="hour-43-2" class="coverageHour lowPriority" onClick="coverageClick(43)">.</td>
-            <td id="hour-67-2" class="coverageHour lowPriority" onClick="coverageClick(67)">.</td>
-            <td id="hour-91-2" class="coverageHour lowPriority" onClick="coverageClick(91)">.</td>
-            <td id="hour-115-2" class="coverageHour lowPriority" onClick="coverageClick(115)">.</td>
-            <td id="hour-139-2" class="coverageHour lowPriority" onClick="coverageClick(139)">.</td>
-            <td id="hour-163-2" class="coverageHour lowPriority" onClick="coverageClick(163)">.</td>
+            <td id="hour-19-2" class="coverageHour plannedHour" onClick="coverageClick(19)">.</td>
+            <td id="hour-43-2" class="coverageHour plannedHour" onClick="coverageClick(43)">.</td>
+            <td id="hour-67-2" class="coverageHour plannedHour" onClick="coverageClick(67)">.</td>
+            <td id="hour-91-2" class="coverageHour plannedHour" onClick="coverageClick(91)">.</td>
+            <td id="hour-115-2" class="coverageHour plannedHour" onClick="coverageClick(115)">.</td>
+            <td id="hour-139-2" class="coverageHour plannedHour" onClick="coverageClick(139)">.</td>
+            <td id="hour-163-2" class="coverageHour plannedHour" onClick="coverageClick(163)">.</td>
         </tr>
         <tr><td class="coverageHour lowPriorityColumn">20</td>
-            <td id="hour-20-2" class="coverageHour lowPriority" onClick="coverageClick(20)">.</td>
-            <td id="hour-44-2" class="coverageHour lowPriority" onClick="coverageClick(44)">.</td>
-            <td id="hour-68-2" class="coverageHour lowPriority" onClick="coverageClick(68)">.</td>
-            <td id="hour-92-2" class="coverageHour lowPriority" onClick="coverageClick(92)">.</td>
-            <td id="hour-116-2" class="coverageHour lowPriority" onClick="coverageClick(116)">.</td>
-            <td id="hour-140-2" class="coverageHour lowPriority" onClick="coverageClick(140)">.</td>
-            <td id="hour-164-2" class="coverageHour lowPriority" onClick="coverageClick(164)">.</td>
+            <td id="hour-20-2" class="coverageHour plannedHour" onClick="coverageClick(20)">.</td>
+            <td id="hour-44-2" class="coverageHour plannedHour" onClick="coverageClick(44)">.</td>
+            <td id="hour-68-2" class="coverageHour plannedHour" onClick="coverageClick(68)">.</td>
+            <td id="hour-92-2" class="coverageHour plannedHour" onClick="coverageClick(92)">.</td>
+            <td id="hour-116-2" class="coverageHour plannedHour" onClick="coverageClick(116)">.</td>
+            <td id="hour-140-2" class="coverageHour plannedHour" onClick="coverageClick(140)">.</td>
+            <td id="hour-164-2" class="coverageHour plannedHour" onClick="coverageClick(164)">.</td>
         </tr>
         <tr><td class="coverageHour lowPriorityColumn">21</td>
-            <td id="hour-21-2" class="coverageHour lowPriority" onClick="coverageClick(21)">.</td>
-            <td id="hour-45-2" class="coverageHour lowPriority" onClick="coverageClick(45)">.</td>
-            <td id="hour-69-2" class="coverageHour lowPriority" onClick="coverageClick(69)">.</td>
-            <td id="hour-93-2" class="coverageHour lowPriority" onClick="coverageClick(93)">.</td>
-            <td id="hour-117-2" class="coverageHour lowPriority" onClick="coverageClick(117)">.</td>
-            <td id="hour-141-2" class="coverageHour lowPriority" onClick="coverageClick(141)">.</td>
-            <td id="hour-165-2" class="coverageHour lowPriority" onClick="coverageClick(165)">.</td>
+            <td id="hour-21-2" class="coverageHour plannedHour" onClick="coverageClick(21)">.</td>
+            <td id="hour-45-2" class="coverageHour plannedHour" onClick="coverageClick(45)">.</td>
+            <td id="hour-69-2" class="coverageHour plannedHour" onClick="coverageClick(69)">.</td>
+            <td id="hour-93-2" class="coverageHour plannedHour" onClick="coverageClick(93)">.</td>
+            <td id="hour-117-2" class="coverageHour plannedHour" onClick="coverageClick(117)">.</td>
+            <td id="hour-141-2" class="coverageHour plannedHour" onClick="coverageClick(141)">.</td>
+            <td id="hour-165-2" class="coverageHour plannedHour" onClick="coverageClick(165)">.</td>
         </tr>
         <tr><td class="coverageHour lowPriorityColumn">22</td>
             <td id="hour-22-2" class="coverageHour lowPriority" onClick="coverageClick(22)">.</td>
