--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/resources/css/coverageBar.css
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/resources/css/coverageBar.css
@@ -106,6 +106,10 @@
     opacity: 0.7
 }
 
+.plannedHour {
+    opacity: 0.4
+}
+
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
