initial internationalization implementation - not ready for use - #2

--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/navbar.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/navbar.html
@@ -4,19 +4,19 @@
             <table class="fullWidth" role="presentation"><tbody><tr>
                 <td class="textLeft">
     			<ul class="nav">
-	    			<li id="nav-home"><a class="menu-item-text" href="/adoration/">ÖRÖKIMÁDÁS</a></li>
-                    <li id="nav-ador-registration" style="display:none"><a class="menu-item-text" href="/adoration/adorRegistration">JELENTKEZÉS ÖRÖKIMÁDÁSRA</a></li>
-                    <li id="nav-ador-live"><a class="menu-item-text" href="/adorationSecure/live">ÉLŐ KÖZVETÍTÉS</a></li>
-                    <li id="nav-information" style="display:none"><a class="menu-item-text" href="/adorationSecure/information">INFORMÁCIÓK</a></li>
-			    	<li id="nav-ador-list" style="display:none"><a class="menu-item-text" href="/adorationSecure/adorationList">ADORÁLÓLISTA</a></li>
-				    <li id="nav-application-log" style="display:none"><a class="menu-item-text" href="/adorationSecure/applog">ADMINISZTRÁCIÓ</a></li>
+	    			<li id="nav-home"><a class="menu-item-text" href="/adoration/"><ex:i18n messageId="navbar.html.nav-home"/></a></li>
+                    <li id="nav-ador-registration" style="display:none"><a class="menu-item-text" href="/adoration/adorRegistration"><ex:i18n messageId="navbar.html.nav-ador-registration"/></a></li>
+                    <li id="nav-ador-live"><a class="menu-item-text" href="/adorationSecure/live"><ex:i18n messageId="navbar.html.nav-ador-live"/></a></li>
+                    <li id="nav-information" style="display:none"><a class="menu-item-text" href="/adorationSecure/information"><ex:i18n messageId="navbar.html.nav-information"/></a></li>
+			    	<li id="nav-ador-list" style="display:none"><a class="menu-item-text" href="/adorationSecure/adorationList"><ex:i18n messageId="navbar.html.nav-ador-list"/></a></li>
+				    <li id="nav-application-log" style="display:none"><a class="menu-item-text" href="/adorationSecure/applog"><ex:i18n messageId="navbar.html.nav-application-log"/></a></li>
                 </ul>
                 </td>
                 <td class="textRight">
                 <ul class="nav">
                     <li id="loggedInUserLegend" style="color: #E05050"></li>
-                    <li id="nav-login" style="display:none"><a class="menu-item-text" href="/adoration/login">BELÉPÉS</a></li>
-                    <li id="nav-exit" style="display:none"><a class="menu-item-text" href="/adorationSecure/exit">KILÉPÉS</a></li>
+                    <li id="nav-login" style="display:none"><a class="menu-item-text" href="/adoration/login"><ex:i18n messageId="navbar.html.nav-login"/></a></li>
+                    <li id="nav-exit" style="display:none"><a class="menu-item-text" href="/adorationSecure/exit"><ex:i18n messageId="navbar.html.nav-exit"/></a></li>
                 </ul>
                 </td>
             </tr></tbody></table>
