--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
@@ -3,21 +3,21 @@
     <table class="coverageTable-2" role="presentation">
         <tbody>
         <tr>
-            <td/><td/><td class="textCenter topHours" colspan="7">Napok</td>
+            <td/><td/><td class="textCenter topHours" colspan="7"><ex:i18n messageId="coverageBar.html.days"/></td>
         </tr>
         <tr><td>&nbsp;</td><td/><td class="coverageDay-2-support"/><td class="coverageDay-2-support"/><td class="coverageDay-2-support"/><td class="coverageDay-2-support"/><td class="coverageDay-2-support"/><td class="coverageDay-2-support"/><td class="coverageDay-2-support"/></tr>
         <tr><td>&nbsp;</td><td/><td class="coverageDay-2-support"/><td class="coverageDay-2-support"/><td class="coverageDay-2-support"/><td class="coverageDay-2-support"/><td class="coverageDay-2-support"/><td class="coverageDay-2-support"/><td class="coverageDay-2-support"/></tr>
         <tr>
             <td/><td/>
-            <td class="coverageDay-2 rotated"><p class="dayName" id="sunday-2"></p></td>
-            <td class="coverageDay-2 rotated"><p class="dayName" id="monday-2"></p></td>
-            <td class="coverageDay-2 rotated"><p class="dayName" id="tuesday-2"></p></td>
-            <td class="coverageDay-2 rotated"><p class="dayName" id="wednesday-2"></p></td>
-            <td class="coverageDay-2 rotated"><p class="dayName" id="thursday-2"></p></td>
-            <td class="coverageDay-2 rotated"><p class="dayName" id="friday-2"></p></td>
-            <td class="coverageDay-2 rotated"><p class="dayName" id="saturday-2"></p></td>
+            <td class="coverageDay-2 rotated"><p class="dayName" id="sunday-2"><ex:i18n messageId="coverageBar.html.day.0"/></p></td>
+            <td class="coverageDay-2 rotated"><p class="dayName" id="monday-2"><ex:i18n messageId="coverageBar.html.day.1"/></p></td>
+            <td class="coverageDay-2 rotated"><p class="dayName" id="tuesday-2"><ex:i18n messageId="coverageBar.html.day.2"/></p></td>
+            <td class="coverageDay-2 rotated"><p class="dayName" id="wednesday-2"><ex:i18n messageId="coverageBar.html.day.3"/></p></td>
+            <td class="coverageDay-2 rotated"><p class="dayName" id="thursday-2"><ex:i18n messageId="coverageBar.html.day.4"/></p></td>
+            <td class="coverageDay-2 rotated"><p class="dayName" id="friday-2"><ex:i18n messageId="coverageBar.html.day.5"/></p></td>
+            <td class="coverageDay-2 rotated"><p class="dayName" id="saturday-2"><ex:i18n messageId="coverageBar.html.day.6"/></p></td>
         </tr>
-        <tr><td class="centerText coverageDaysLeftSide" rowspan="24"><p>Órák</p></td>
+        <tr><td class="centerText coverageDaysLeftSide" rowspan="24"><p><ex:i18n messageId="coverageBar.html.hours"/></p></td>
             <td class="coverageHour lowPriorityColumn">0</td>
             <td id="hour-0-2" class="coverageHour lowPriority" onClick="coverageClick(0)">.</td>
             <td id="hour-24-2" class="coverageHour lowPriority" onClick="coverageClick(24)">.</td>
