extend Thursday hours again

--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
@@ -158,10 +158,10 @@
             <td id="hour-112" class="coverageHour" onClick="coverageClick(112)">.</td>
             <td id="hour-113" class="coverageHour" onClick="coverageClick(113)">.</td>
             <td id="hour-114" class="coverageHour" onClick="coverageClick(114)">.</td>
-            <td id="hour-115" class="coverageHour lowPriority" onClick="coverageClick(115)">.</td>
-            <td id="hour-116" class="coverageHour lowPriority" onClick="coverageClick(116)">.</td>
-            <td id="hour-117" class="coverageHour lowPriority" onClick="coverageClick(117)">.</td>
-            <td id="hour-118" class="coverageHour lowPriority" onClick="coverageClick(118)">.</td>
+            <td id="hour-115" class="coverageHour" onClick="coverageClick(115)">.</td>
+            <td id="hour-116" class="coverageHour" onClick="coverageClick(116)">.</td>
+            <td id="hour-117" class="coverageHour" onClick="coverageClick(117)">.</td>
+            <td id="hour-118" class="coverageHour" onClick="coverageClick(118)">.</td>
             <td id="hour-119" class="coverageHour lowPriority" onClick="coverageClick(119)">.</td>
         </tr>
         <tr>
