--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
@@ -203,7 +203,7 @@
             <td id="hour-43-2" class="coverageHour lowPriority" onClick="coverageClick(43)">.</td>
             <td id="hour-67-2" class="coverageHour lowPriority" onClick="coverageClick(67)">.</td>
             <td id="hour-91-2" class="coverageHour lowPriority" onClick="coverageClick(91)">.</td>
-            <td id="hour-115-2" class="coverageHour lowPriority" onClick="coverageClick(115)">.</td>
+            <td id="hour-115-2" class="coverageHour" onClick="coverageClick(115)">.</td>
             <td id="hour-139-2" class="coverageHour lowPriority" onClick="coverageClick(139)">.</td>
             <td id="hour-163-2" class="coverageHour lowPriority" onClick="coverageClick(163)">.</td>
         </tr>
@@ -212,7 +212,7 @@
             <td id="hour-44-2" class="coverageHour lowPriority" onClick="coverageClick(44)">.</td>
             <td id="hour-68-2" class="coverageHour lowPriority" onClick="coverageClick(68)">.</td>
             <td id="hour-92-2" class="coverageHour lowPriority" onClick="coverageClick(92)">.</td>
-            <td id="hour-116-2" class="coverageHour lowPriority" onClick="coverageClick(116)">.</td>
+            <td id="hour-116-2" class="coverageHour" onClick="coverageClick(116)">.</td>
             <td id="hour-140-2" class="coverageHour lowPriority" onClick="coverageClick(140)">.</td>
             <td id="hour-164-2" class="coverageHour lowPriority" onClick="coverageClick(164)">.</td>
         </tr>
@@ -221,7 +221,7 @@
             <td id="hour-45-2" class="coverageHour lowPriority" onClick="coverageClick(45)">.</td>
             <td id="hour-69-2" class="coverageHour lowPriority" onClick="coverageClick(69)">.</td>
             <td id="hour-93-2" class="coverageHour lowPriority" onClick="coverageClick(93)">.</td>
-            <td id="hour-117-2" class="coverageHour lowPriority" onClick="coverageClick(117)">.</td>
+            <td id="hour-117-2" class="coverageHour" onClick="coverageClick(117)">.</td>
             <td id="hour-141-2" class="coverageHour lowPriority" onClick="coverageClick(141)">.</td>
             <td id="hour-165-2" class="coverageHour lowPriority" onClick="coverageClick(165)">.</td>
         </tr>
@@ -230,7 +230,7 @@
             <td id="hour-46-2" class="coverageHour lowPriority" onClick="coverageClick(46)">.</td>
             <td id="hour-70-2" class="coverageHour lowPriority" onClick="coverageClick(70)">.</td>
             <td id="hour-94-2" class="coverageHour lowPriority" onClick="coverageClick(94)">.</td>
-            <td id="hour-118-2" class="coverageHour lowPriority" onClick="coverageClick(118)">.</td>
+            <td id="hour-118-2" class="coverageHour" onClick="coverageClick(118)">.</td>
             <td id="hour-142-2" class="coverageHour lowPriority" onClick="coverageClick(142)">.</td>
             <td id="hour-166-2" class="coverageHour lowPriority" onClick="coverageClick(166)">.</td>
         </tr>
