thue evening is full

--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
@@ -134,7 +134,7 @@
             <td id="hour-116" class="coverageHour" onClick="coverageClick(116)">.</td>
             <td id="hour-117" class="coverageHour" onClick="coverageClick(117)">.</td>
             <td id="hour-118" class="coverageHour" onClick="coverageClick(118)">.</td>
-            <td id="hour-119" class="coverageHour lowPriority" onClick="coverageClick(119)">.</td>
+            <td id="hour-119" class="coverageHour" onClick="coverageClick(119)">.</td>
         </tr>
         <tr>
             <td id="friday" colspan="3" class="coverageDay dayName"><ex:i18n messageId="coverageBar.html.day.5"/></td>
