--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
@@ -229,7 +229,7 @@
             <td id="hour-47-2" class="coverageHour lowPriority" onClick="coverageClick(47)">.</td>
             <td id="hour-71-2" class="coverageHour lowPriority" onClick="coverageClick(71)">.</td>
             <td id="hour-95-2" class="coverageHour lowPriority" onClick="coverageClick(95)">.</td>
-            <td id="hour-119-2" class="coverageHour lowPriority" onClick="coverageClick(119)">.</td>
+            <td id="hour-119-2" class="coverageHour" onClick="coverageClick(119)">.</td>
             <td id="hour-143-2" class="coverageHour lowPriority" onClick="coverageClick(143)">.</td>
             <td id="hour-167-2" class="coverageHour lowPriority" onClick="coverageClick(167)">.</td>
             <td id="hour-23-2" class="coverageHour lowPriority" onClick="coverageClick(23)">.</td>
