Thu night/Fri morning is ON

--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
@@ -138,13 +138,13 @@
         </tr>
         <tr>
             <td id="friday" colspan="3" class="coverageDay dayName"><ex:i18n messageId="coverageBar.html.day.5"/></td>
-            <td id="hour-120" class="coverageHour lowPriority" onClick="coverageClick(120)">.</td>
-            <td id="hour-121" class="coverageHour lowPriority" onClick="coverageClick(121)">.</td>
-            <td id="hour-122" class="coverageHour lowPriority" onClick="coverageClick(122)">.</td>
-            <td id="hour-123" class="coverageHour lowPriority" onClick="coverageClick(123)">.</td>
-            <td id="hour-124" class="coverageHour lowPriority" onClick="coverageClick(124)">.</td>
-            <td id="hour-125" class="coverageHour lowPriority" onClick="coverageClick(125)">.</td>
-            <td id="hour-126" class="coverageHour lowPriority" onClick="coverageClick(126)">.</td>
+            <td id="hour-120" class="coverageHour" onClick="coverageClick(120)">.</td>
+            <td id="hour-121" class="coverageHour" onClick="coverageClick(121)">.</td>
+            <td id="hour-122" class="coverageHour" onClick="coverageClick(122)">.</td>
+            <td id="hour-123" class="coverageHour" onClick="coverageClick(123)">.</td>
+            <td id="hour-124" class="coverageHour" onClick="coverageClick(124)">.</td>
+            <td id="hour-125" class="coverageHour" onClick="coverageClick(125)">.</td>
+            <td id="hour-126" class="coverageHour" onClick="coverageClick(126)">.</td>
             <td id="hour-127" class="coverageHour" onClick="coverageClick(127)">.</td>
             <td id="hour-128" class="coverageHour" onClick="coverageClick(128)">.</td>
             <td id="hour-129" class="coverageHour" onClick="coverageClick(129)">.</td>
