--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
@@ -23,7 +23,7 @@
             <td id="hour-48-2" class="coverageHour lowPriority" onClick="coverageClick(48)">.</td>
             <td id="hour-72-2" class="coverageHour lowPriority" onClick="coverageClick(72)">.</td>
             <td id="hour-96-2" class="coverageHour lowPriority" onClick="coverageClick(96)">.</td>
-            <td id="hour-120-2" class="coverageHour lowPriority" onClick="coverageClick(120)">.</td>
+            <td id="hour-120-2" class="coverageHour" onClick="coverageClick(120)">.</td>
             <td id="hour-144-2" class="coverageHour lowPriority" onClick="coverageClick(144)">.</td>
             <td id="hour-0-2" class="coverageHour lowPriority" onClick="coverageClick(0)">.</td>
         </tr>
@@ -32,7 +32,7 @@
             <td id="hour-49-2" class="coverageHour lowPriority" onClick="coverageClick(49)">.</td>
             <td id="hour-73-2" class="coverageHour lowPriority" onClick="coverageClick(73)">.</td>
             <td id="hour-97-2" class="coverageHour lowPriority" onClick="coverageClick(97)">.</td>
-            <td id="hour-121-2" class="coverageHour lowPriority" onClick="coverageClick(121)">.</td>
+            <td id="hour-121-2" class="coverageHour" onClick="coverageClick(121)">.</td>
             <td id="hour-145-2" class="coverageHour lowPriority" onClick="coverageClick(145)">.</td>
             <td id="hour-1-2" class="coverageHour lowPriority" onClick="coverageClick(1)">.</td>
         </tr>
@@ -41,7 +41,7 @@
             <td id="hour-50-2" class="coverageHour lowPriority" onClick="coverageClick(50)">.</td>
             <td id="hour-74-2" class="coverageHour lowPriority" onClick="coverageClick(74)">.</td>
             <td id="hour-98-2" class="coverageHour lowPriority" onClick="coverageClick(98)">.</td>
-            <td id="hour-122-2" class="coverageHour lowPriority" onClick="coverageClick(122)">.</td>
+            <td id="hour-122-2" class="coverageHour" onClick="coverageClick(122)">.</td>
             <td id="hour-146-2" class="coverageHour lowPriority" onClick="coverageClick(146)">.</td>
             <td id="hour-2-2" class="coverageHour lowPriority" onClick="coverageClick(2)">.</td>
         </tr>
@@ -50,7 +50,7 @@
             <td id="hour-51-2" class="coverageHour lowPriority" onClick="coverageClick(51)">.</td>
             <td id="hour-75-2" class="coverageHour lowPriority" onClick="coverageClick(75)">.</td>
             <td id="hour-99-2" class="coverageHour lowPriority" onClick="coverageClick(99)">.</td>
-            <td id="hour-123-2" class="coverageHour lowPriority" onClick="coverageClick(123)">.</td>
+            <td id="hour-123-2" class="coverageHour" onClick="coverageClick(123)">.</td>
             <td id="hour-147-2" class="coverageHour lowPriority" onClick="coverageClick(147)">.</td>
             <td id="hour-3-2" class="coverageHour lowPriority" onClick="coverageClick(3)">.</td>
         </tr>
@@ -59,7 +59,7 @@
             <td id="hour-52-2" class="coverageHour lowPriority" onClick="coverageClick(52)">.</td>
             <td id="hour-76-2" class="coverageHour lowPriority" onClick="coverageClick(76)">.</td>
             <td id="hour-100-2" class="coverageHour lowPriority" onClick="coverageClick(100)">.</td>
-            <td id="hour-124-2" class="coverageHour lowPriority" onClick="coverageClick(124)">.</td>
+            <td id="hour-124-2" class="coverageHour" onClick="coverageClick(124)">.</td>
             <td id="hour-148-2" class="coverageHour lowPriority" onClick="coverageClick(148)">.</td>
             <td id="hour-4-2" class="coverageHour lowPriority" onClick="coverageClick(4)">.</td>
         </tr>
@@ -68,7 +68,7 @@
             <td id="hour-53-2" class="coverageHour lowPriority" onClick="coverageClick(53)">.</td>
             <td id="hour-77-2" class="coverageHour lowPriority" onClick="coverageClick(77)">.</td>
             <td id="hour-101-2" class="coverageHour lowPriority" onClick="coverageClick(101)">.</td>
-            <td id="hour-125-2" class="coverageHour lowPriority" onClick="coverageClick(125)">.</td>
+            <td id="hour-125-2" class="coverageHour" onClick="coverageClick(125)">.</td>
             <td id="hour-149-2" class="coverageHour lowPriority" onClick="coverageClick(149)">.</td>
             <td id="hour-5-2" class="coverageHour lowPriority" onClick="coverageClick(5)">.</td>
         </tr>
@@ -77,7 +77,7 @@
             <td id="hour-54-2" class="coverageHour lowPriority" onClick="coverageClick(54)">.</td>
             <td id="hour-78-2" class="coverageHour lowPriority" onClick="coverageClick(78)">.</td>
             <td id="hour-102-2" class="coverageHour lowPriority" onClick="coverageClick(102)">.</td>
-            <td id="hour-126-2" class="coverageHour lowPriority" onClick="coverageClick(126)">.</td>
+            <td id="hour-126-2" class="coverageHour" onClick="coverageClick(126)">.</td>
             <td id="hour-150-2" class="coverageHour lowPriority" onClick="coverageClick(150)">.</td>
             <td id="hour-6-2" class="coverageHour lowPriority" onClick="coverageClick(6)">.</td>
         </tr>
