sun evening 7 is opened

--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
@@ -211,8 +211,7 @@
             <td id="hour-16" class="coverageHour" onClick="coverageClick(16)">.</td>
             <td id="hour-17" class="coverageHour" onClick="coverageClick(17)">.</td>
             <td id="hour-18" class="coverageHour" onClick="coverageClick(18)">.</td>
-            <!-- td id="hour-19" class="coverageHour plannedHour" onClick="coverageClick(19)">.</td -->
-            <td id="hour-19" class="coverageHour lowPriority" onClick="coverageClick(19)">.</td>
+            <td id="hour-19" class="coverageHour" onClick="coverageClick(19)">.</td>
             <td id="hour-20" class="coverageHour lowPriority" onClick="coverageClick(20)">.</td>
             <td id="hour-21" class="coverageHour lowPriority" onClick="coverageClick(21)">.</td>
             <td id="hour-22" class="coverageHour lowPriority" onClick="coverageClick(22)">.</td>
