--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBarVertical.html
@@ -196,7 +196,7 @@
             <td id="hour-115-2" class="coverageHour" onClick="coverageClick(115)">.</td>
             <td id="hour-139-2" class="coverageHour lowPriority" onClick="coverageClick(139)">.</td>
             <td id="hour-163-2" class="coverageHour lowPriority" onClick="coverageClick(163)">.</td>
-            <td id="hour-19-2" class="coverageHour lowPriority" onClick="coverageClick(19)">.</td>
+            <td id="hour-19-2" class="coverageHour" onClick="coverageClick(19)">.</td>
         </tr>
         <tr><td class="coverageHour lowPriorityColumn">20</td>
             <td id="hour-44-2" class="coverageHour" onClick="coverageClick(44)">.</td>
