further hours covered

--- a/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/webapp/WEB-INF/include/coverageBar.html
@@ -52,7 +52,7 @@
             <td id="hour-43" class="coverageHour" onClick="coverageClick(43)">.</td>
             <td id="hour-44" class="coverageHour" onClick="coverageClick(44)">.</td>
             <td id="hour-45" class="coverageHour" onClick="coverageClick(45)">.</td>
-            <td id="hour-46" class="coverageHour lowPriority" onClick="coverageClick(46)">.</td>
+            <td id="hour-46" class="coverageHour" onClick="coverageClick(46)">.</td>
             <td id="hour-47" class="coverageHour lowPriority" onClick="coverageClick(47)">.</td>
         </tr>
         <tr>
